tests/assignement/to_int.rev
var int = 1 // error: missing variable name after 'var' keyword in declaration